fix header spacing

--- a/responsive.css
+++ b/responsive.css
@@ -23,13 +23,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 87%;
+    width: 100%;
     max-width: 100%;
-    height: 50px;
+    height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 30px;
+    padding: 15px 30px;
   }
 
   .scrolled {
